[project]
name = "cmon"
version = "0.1.0"
description = "Modern Slurm cluster monitoring tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
cmon = "cmon.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cmon"]

# PyInstaller configuration for binary builds
[tool.pyinstaller]
name = "cmon"
entry_point = "src/cmon/__main__.py"
onefile = true
console = true
hidden_imports = [
    "typer",
    "rich",
    "pydantic",
]
